--- a/src/managers/templates/managers/feedback/feedback_confirm_delete.html
+++ b/src/managers/templates/managers/feedback/feedback_confirm_delete.html
@@ -5,7 +5,7 @@
 {% block title %}{% trans "Подтверждение удаления" %} - PyLand{% endblock %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/managers/dashboard.css' %}?v=20260204-actions">
+<link rel="stylesheet" href="{% static 'css/managers/dashboard.css' %}?v=20260205-light-theme">
 {% endblock %}
 
 {% block header %}
