--- a/src/managers/templates/managers/feedback/feedback_detail.html
+++ b/src/managers/templates/managers/feedback/feedback_detail.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/managers/dashboard.css' %}?v=20260204-actions">
+<link rel="stylesheet" href="{% static 'css/managers/dashboard.css' %}?v=20260205-light-theme">
 {% endblock %}
 
 {% block content %}
