--- a/src/managers/templates/managers/feedback/feedback_list.html
+++ b/src/managers/templates/managers/feedback/feedback_list.html
@@ -25,7 +25,7 @@
             <div>
                 <h1 class="dashboard-title">{% trans "Обратная связь" %}</h1>
                 <div class="dashboard-breadcrumb">
-                    <span>{% trans "Главная" %}</span>
+                    <a href="{% url 'managers:dashboard' request.user.manager.id %}">{% trans "Главная" %}</a>
                     <svg width="16" height="16" fill="currentColor" viewBox="0 0 24 24">
                         <path d="m9 18 6-6-6-6"/>
                     </svg>
