feat(managers): Add payments management system

--- a/src/managers/templates/managers/_sidebar_nav.html
+++ b/src/managers/templates/managers/_sidebar_nav.html
@@ -50,5 +50,14 @@
                 {% trans "Системные логи" %}
             </a>
         </li>
+        <li class="dashboard-nav-item">
+            <a href="{% url 'managers:payments_list' request.user.manager.id %}"
+               class="dashboard-nav-link {% if active_page == 'payments' %}active{% endif %}">
+                <svg class="dashboard-nav-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h18M7 15h1m4 0h1m-7 4h12a3 3 0 003-3V8a3 3 0 00-3-3H6a3 3 0 00-3 3v8a3 3 0 003 3z"/>
+                </svg>
+                {% trans "Платежи" %}
+            </a>
+        </li>
     </ul>
 </nav>
